--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 /* css/style.css */
+.langual-body {
+  position: relative !important;
+  top: 0 !important;
+  margin: 0;
+}
 .VIpgJd-ZVi9od-ORHb-OEVmcd {
   height: 0px !important;
   border: none;
